force-app/main/default/objects/Approval_Matrix__c/fields/BM_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>BM_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BM Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrices9</relationshipName>
    <type>Lookup</type>
</CustomField>