force-app/main/default/objects/Approval_Matrix__c/fields/BM_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>BM_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BM Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_MatriceswY0O</relationshipName>
    <type>Lookup</type>
</CustomField>