force-app/main/default/objects/Approval_Matrix__c/fields/BM_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>BM_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BM Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_MatriceswY0i</relationshipName>
    <type>Lookup</type>
</CustomField>