force-app/main/default/objects/Approval_Matrix__c/fields/BM_Approver_3_Name__c.field-meta.xml
<CustomField>
    <fullName>BM_Approver_3_Name__c</fullName>
    <formula>BM_Approver_3__r.FirstName &amp; &#39; &#39; &amp; IF(NOT(ISBLANK(BM_Approver_3__r.MiddleName)),BM_Approver_3__r.MiddleName &amp; &#39; &#39; ,&#39;&#39;) &amp; BM_Approver_3__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BM Approver 3</label>
    <type>Text</type>
</CustomField>