force-app/main/default/objects/Approval_Matrix__c/fields/Criterion__c.field-meta.xml
<CustomField>
    <fullName>Criterion__c</fullName>
    <externalId>true</externalId>
    <label>Criterion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>