force-app/main/default/objects/Approval_Matrix__c/fields/SP_Approver_1_Name__c.field-meta.xml
<CustomField>
    <fullName>SP_Approver_1_Name__c</fullName>
    <formula>SP_Approver_1__r.FirstName &amp; &#39; &#39; &amp; IF(NOT(ISBLANK(SP_Approver_1__r.MiddleName)),SP_Approver_1__r.MiddleName &amp; &#39; &#39; ,&#39;&#39;) &amp; SP_Approver_1__r.LastName</formula>
    <label>SP Approver 1</label>
    <type>Text</type>
</CustomField>