force-app/main/default/objects/Approval_Matrix__c/fields/SP_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>SP_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_MatriceswYIX</relationshipName>
    <type>Lookup</type>
</CustomField>