force-app/main/default/objects/Approval_Matrix__c/fields/SP_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>SP_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SP Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrices6</relationshipName>
    <type>Lookup</type>
</CustomField>