force-app/main/default/objects/Approval_Matrix__c/fields/ST_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>ST_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ST Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>