force-app/main/default/objects/Approval_Matrix__c/fields/ST_Approver_1_Name__c.field-meta.xml
<CustomField>
    <fullName>ST_Approver_1_Name__c</fullName>
    <formula>ST_Approver_1__r.FirstName &amp; &#39; &#39; &amp; IF(NOT(ISBLANK(ST_Approver_1__r.MiddleName)),ST_Approver_1__r.MiddleName &amp; &#39; &#39; ,&#39;&#39;) &amp; ST_Approver_1__r.LastName</formula>
    <label>ST Approver 1</label>
    <type>Text</type>
</CustomField>