force-app/main/default/objects/Approval_Matrix__c/fields/ST_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>ST_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ST Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrices1</relationshipName>
    <type>Lookup</type>
</CustomField>