force-app/main/default/objects/Approval_Matrix__c/fields/ST_Approver_3_Name__c.field-meta.xml
<CustomField>
    <fullName>ST_Approver_3_Name__c</fullName>
    <formula>ST_Approver_3__r.FirstName &amp; &#39; &#39; &amp; IF(NOT(ISBLANK(ST_Approver_3__r.MiddleName)),ST_Approver_3__r.MiddleName &amp; &#39; &#39; ,&#39;&#39;) &amp; ST_Approver_3__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ST Approver 3</label>
    <type>Text</type>
</CustomField>