force-app/main/default/objects/Approval_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Criterion__c</columns>
    <columns>BM_Approver_1__c</columns>
    <columns>BM_Approver_2__c</columns>
    <columns>BM_Approver_3__c</columns>
    <columns>BM_Approver_4__c</columns>
    <columns>BM_Approver_5__c</columns>
    <columns>SP_Approver_1__c</columns>
    <columns>SP_Approver_2__c</columns>
    <columns>SP_Approver_3__c</columns>
    <columns>SP_Approver_4__c</columns>
    <columns>SP_Approver_5__c</columns>
    <columns>ST_Approver_1__c</columns>
    <columns>ST_Approver_2__c</columns>
    <columns>ST_Approver_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>